--- a/feedback.html
+++ b/feedback.html
@@ -99,7 +99,7 @@ $(function()
 
                     $.ajax({
                 type: "POST",
-                url: 'http://reusableforms.com/handler/d4/feedback-form-in-html',
+                url: 'https://github.com/ananthuc73/Freppn-App-Website/edit/master/feedback.html',
                 data: $form.serialize(),
                 success: after_form_submitted,
                 dataType: 'json' 
